tests/baselines/reference/jsdocTemplateClass.errors.txt
tests/cases/conformance/jsdoc/templateTagOnClasses.js(25,1): error TS2322: Type 'boolean' is not assignable to type 'number'.


==== tests/cases/conformance/jsdoc/templateTagOnClasses.js (1 errors) ====
    /**
     * @template T
     * @typedef {(t: T) => T} Id
     */
    /** @template T */
    class Foo {
        /** @typedef {(t: T) => T} Id2 */
        /** @param {T} x */
        constructor (x) {
            this.a = x
        }
        /**
         * 
         * @param {T} x 
         * @param {Id<T>} y
         * @param {Id2} alpha
         * @return {T}
         */
        foo(x, y, alpha) {
            return alpha(y(x))
        }
    }
    var f = new Foo(1)
    var g = new Foo(false)
    f.a = g.a
    ~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
    